# rust-game-of-life

./: Cargo.toml  README.md
src/: game.rs  grid.rs  main.rs  ui.rs
