[package]
name = "gol"
version = "0.1.0"
authors = ["Michael Lutsiuk <michael.lutsiuk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.8.1", features = ["v3_16"] }
glib = "0.9.3"
gio = "0.8.1"
glium = "0.26.0"
cairo-rs = "0.8.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = { version = "1.0.48" }
